--- a/.github/workflows/maintenance.yml
+++ b/.github/workflows/maintenance.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     # Run weekly on Sundays at 2 AM UTC
     - cron: '0 2 * * 0'
-  workflow_dispatch: # Allow manual execution
+  workflow_dispatch:  # Allow manual execution
   push:
     paths:
       - 'package.json'
@@ -18,20 +18,20 @@ jobs:
   security-audit:
     name: 🔒 Security Audit
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
-
+        
       - name: 📦 Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-
+          
       - name: 📥 Install dependencies
         run: npm ci
-
+        
       - name: 🔍 Run npm audit
         run: |
           echo "🔍 Running npm security audit..."
@@ -41,13 +41,13 @@ jobs:
             cat audit-results.json
             exit 1
           }
-
+          
       - name: 📊 Generate security report
         if: failure()
         run: |
           echo "📊 Generating security report..."
           npm audit --audit-level=low --json | jq '.' > security-report.json
-
+          
       - name: 📤 Upload security report
         if: failure()
         uses: actions/upload-artifact@v4
@@ -60,31 +60,31 @@ jobs:
   dependency-check:
     name: 📦 Dependency Updates
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
-
+        
       - name: 📦 Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-
+          
       - name: 📥 Install dependencies
         run: npm ci
-
+        
       - name: 🔍 Check for outdated packages
         run: |
           echo "🔍 Checking for outdated dependencies..."
           npm outdated || true
-
+          
       - name: 📊 Generate dependency report
         run: |
           echo "📊 Generating dependency update report..."
           npm outdated --json > outdated-deps.json || true
           cat outdated-deps.json || echo "No outdated dependencies found"
-
+          
       - name: 📤 Upload dependency report
         uses: actions/upload-artifact@v4
         with:
@@ -100,24 +100,24 @@ jobs:
       actions: read
       contents: read
       security-events: write
-
+      
     strategy:
       fail-fast: false
       matrix:
-        language: ['javascript']
-
+        language: [ 'javascript' ]
+        
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
-
+        
       - name: 🔍 Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
           languages: ${{ matrix.language }}
-
+          
       - name: 🏗️ Autobuild
         uses: github/codeql-action/autobuild@v3
-
+        
       - name: 🔍 Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
 
@@ -125,29 +125,29 @@ jobs:
   license-check:
     name: 📄 License Compliance
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
-
+        
       - name: 📦 Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-
+          
       - name: 📥 Install dependencies
         run: npm ci
-
+        
       - name: 📥 Install license checker
         run: npm install -g license-checker
-
+        
       - name: 📄 Check licenses
         run: |
           echo "📄 Checking package licenses..."
           license-checker --summary
           license-checker --json > licenses.json
-
+          
       - name: 📊 Validate license compatibility
         run: |
           echo "📊 Validating license compatibility..."
@@ -158,7 +158,7 @@ jobs:
             echo "⚠️ Found potentially problematic licenses"
             exit 1
           fi
-
+          
       - name: 📤 Upload license report
         uses: actions/upload-artifact@v4
         with:
@@ -170,40 +170,40 @@ jobs:
   bundle-analysis:
     name: 📊 Bundle Analysis
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
-
+        
       - name: 📦 Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-
+          
       - name: 📥 Install dependencies
         run: npm ci
-
+        
       - name: 🏗️ Build application
         run: npm run build
         env:
           # Use placeholder values for analysis
-          VITE_SUPABASE_URL: 'https://placeholder.supabase.co'
-          VITE_SUPABASE_ANON_KEY: 'placeholder-key'
-
+          VITE_SUPABASE_URL: "https://placeholder.supabase.co"
+          VITE_SUPABASE_ANON_KEY: "placeholder-key"
+          
       - name: 📊 Analyze bundle size
         run: |
           echo "📊 Analyzing bundle size..."
           du -sh dist/
           find dist -name "*.js" -exec ls -lh {} \; | sort -k5 -hr
-
+          
       - name: 📈 Bundle size report
         run: |
           echo "📈 Generating bundle size report..."
           TOTAL_SIZE=$(du -sb dist/ | cut -f1)
           TOTAL_SIZE_MB=$(echo "scale=2; $TOTAL_SIZE / 1024 / 1024" | bc)
           echo "Total bundle size: ${TOTAL_SIZE_MB} MB"
-
+          
           # Create simple report
           echo "# Bundle Size Report" > bundle-report.md
           echo "- **Total Size**: ${TOTAL_SIZE_MB} MB" >> bundle-report.md
@@ -211,7 +211,7 @@ jobs:
           echo "" >> bundle-report.md
           echo "## File Breakdown:" >> bundle-report.md
           find dist -name "*.js" -exec ls -lh {} \; | sort -k5 -hr | head -10 >> bundle-report.md
-
+          
       - name: 📤 Upload bundle report
         uses: actions/upload-artifact@v4
         with:
@@ -225,16 +225,16 @@ jobs:
     runs-on: ubuntu-latest
     needs: [security-audit, dependency-check, license-check, bundle-analysis]
     if: always()
-
+    
     steps:
       - name: 📋 Create maintenance summary
         run: |
           echo "📋 Creating maintenance summary..."
-
+          
           echo "# 🔧 Weekly Maintenance Report" > maintenance-summary.md
           echo "**Generated**: $(date)" >> maintenance-summary.md
           echo "" >> maintenance-summary.md
-
+          
           echo "## 🔒 Security Status" >> maintenance-summary.md
           if [ "${{ needs.security-audit.result }}" == "success" ]; then
             echo "✅ Security audit passed - no vulnerabilities found" >> maintenance-summary.md
@@ -242,7 +242,7 @@ jobs:
             echo "⚠️ Security audit found issues - review required" >> maintenance-summary.md
           fi
           echo "" >> maintenance-summary.md
-
+          
           echo "## 📦 Dependencies" >> maintenance-summary.md
           if [ "${{ needs.dependency-check.result }}" == "success" ]; then
             echo "✅ Dependency check completed" >> maintenance-summary.md
@@ -250,7 +250,7 @@ jobs:
             echo "⚠️ Dependency check found issues" >> maintenance-summary.md
           fi
           echo "" >> maintenance-summary.md
-
+          
           echo "## 📄 License Compliance" >> maintenance-summary.md
           if [ "${{ needs.license-check.result }}" == "success" ]; then
             echo "✅ All licenses are compliant" >> maintenance-summary.md
@@ -258,16 +258,16 @@ jobs:
             echo "⚠️ License compliance issues found" >> maintenance-summary.md
           fi
           echo "" >> maintenance-summary.md
-
+          
           echo "## 📊 Bundle Analysis" >> maintenance-summary.md
           if [ "${{ needs.bundle-analysis.result }}" == "success" ]; then
             echo "✅ Bundle analysis completed successfully" >> maintenance-summary.md
           else
             echo "⚠️ Bundle analysis encountered issues" >> maintenance-summary.md
           fi
-
+          
           cat maintenance-summary.md
-
+          
       - name: 📤 Upload maintenance summary
         uses: actions/upload-artifact@v4
         with:
